Tue May 11 18:53:43 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* Makefile: 
	Added obj to the list of directories.
	
	* source/Makefile: 
	Added rdd to the list of directories.

	* source/rtl/Makefile: 
	Added gtapi.c to the list of C sources.
	
	* source/rtl/gtapi.c: 
	Got rid of two warnings with gcc.
	
	* source/rtl/environ.c: 
	Made sure it compiles with gcc.
	There was a missing #endif.
	
	* source/tools/stringp.prg: 
	* tests/working/debugtst.prg: 
	Replaced Debug() with HBDebug(), otherwise the generated C source
	collides with the macro DEBUG.
	
 	* source/vm/hvm.c:
	Corrected a comment.
	
	* source/rdd/Makefile: 
	* obj/Makefile: 
	Added these two Makefiles.

19990511-19:20 Eddie Runia
  * source/rtl/classes.c
    (Default) parameter self added to INLINE methods
  * tests/working/inline.prg
    Test of INLINE method.

19990511-09:55 Eddie Runia
  * source/rtl/objfunc.prg, source/tools/stringp.prg
    created from tests/working/debugtst.prg
  * Makefile.*
    files added to list. (Except makefile.vc)

19990511-09:40 Eddie Runia
  * source/rtl/asort.prg
    added a seperate function
  * tests/working/debugtst.prg
    asort removed
  * Makefile.*
    asort added to list. (Except for makefile.vc; Incomplete ?)

19990511-00:07 MSG Bil Simser <bsimser@home.com>
  * source/rtc/environ.c
    - Added OS function
  * tests/working
    - Added OS.PRG test program

19990510-21:45 EDT David G. Holm <dholm@jsd-llc.com>
  * source/harbour.y
    - Put back a C++ lvalue fix that appears to have gotten lost
      during a diff merge:
      Parameter in call to yy_switch_to_buffer with embedded
      assignment needs () around the entire expression in order
      to have the (YY_BUFFER_STATE) type override apply to the
      result of the assignment.

Mon May 10 19:32:34 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* makefile.b32: 
	Added source/compiler/harbour.c to this makefile.
	
	* source/compiler/Makefile: 
	Added genobj32.c.
	